# wathematica_discord_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
dev/: docker-compose.yml
docs/usage/: begin.md  new.md
wathematica_discord_bot/: app.py  checks.py  config-dev.json  config.py  database.py  exceptions.py  model.py  utility_methods.py  utils.py
wathematica_discord_bot/Cogs/: admin_tools.py  guild_controllers.py  seminar_controllers.py  user_controllers.py
wathematica_discord_bot/Cogs/AdminTools/: reload.py
wathematica_discord_bot/Cogs/GuildControllers/: auto_setup.py  initialize.py  settings.py
wathematica_discord_bot/Cogs/SeminarControllers/: begin.py  chleader.py  delete.py  end.py  help.py  leader.py  move.py  new.py  pause.py  rename.py  schedule.py
wathematica_discord_bot/Cogs/UserControllers/: assign_role.py  remove_role.py
wathematica_discord_bot/config/: config-2025.json  config-dev.json  config-obog.json
wathematica_discord_bot/view/: settings_view.py
