[project]
name = "wathematica-discord-bot"
version = "0.1.0"
description = "Discord bot for seminar management in Wathematica, written in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "py-cord>=2.6.1",
    "sqlalchemy>=2.0.35",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.9"]
