[project]
name = "wathematica-discord-bot"
version = "0.1.0"
description = "Discord bot for seminar management in Wathematica, written in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "py-cord>=2.6.1",
    "sqlalchemy[asyncio]>=2.0.35",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.9"]
